styles/custom.css
a:link {
  color: #FED14A;
}
a:visited {
  color: #e2c775;
}
.text-center {
  text-align: center;
}

.visible {
  display: none !important;
}
.img-responsive {
  width: 100%;
  height: 100%;
  /*max-height: 100%;*/
}

.flex-row {
  display: flex;
  flex-flow: row nowrap;
}

.flex-column {
  display: flex;
  flex-flow: column nowrap;
}

.jwm-image-small {
  background: url(../assets/j-w-m-blore.png) 100%/cover no-repeat;
  width: 60px;
  height: 60px;
}

.map-infoWindow {
  width: 100%;
}

.price-box .disabled {
    color: gray;
  }

/* Navbar Section */

.navbar {
  height: 100px;
  position: absolute;
  width: 100%;
  background-color: transparent;
  border-color: transparent;
}

.navbar-collapse {
  margin-top: 44px;
  line-height: 36px;
}

.navbar-collapse a {
  font-family: 'Fjalla One', sans-serif;
  font-size: 18px;
  font-weight: normal;
  font-style: normal;
  font-stretch: normal;
  text-align: center;
  color: #ffd527 !important;
  vertical-align: middle;
  margin-left: 25px;
	height: auto;
}

.navbar-nav>li>a {
	line-height: normal;
	padding: 10px 15px;
}

.navbar-default .navbar-nav>li>a.button-buy-ticket:hover {
  background-color: #ffd527;
}


/* Jumbotron Section */

.jumbotron {
  background: #000 url(../assets/landing-image.jpg) center / cover no-repeat;
	box-shadow: inset 0 0 200px 15px #000;
	padding: 0;
	min-height: 650px;
  height: 100vh;
  max-height: 960px;
  margin-bottom: 0px;
  transition: height 1000000s ease;
  -webkit-transition: height 1000000s ease;
  -moz-transition: height 1000000s ease;
  -o-transition: height 1000000s ease;
}

.jschannel-logo {
  margin-top: 140px;
}

.details-phone {
  font-family: 'Open Sans', sans-serif;
  font-size: 24px;
  font-weight: 300;
  font-style: normal;
  font-stretch: condensed;
  text-align: left;
  color: #ffd527;
  margin-top: 50px;
}

.details-phone .details-phone-row {
  margin-bottom: 50px;
	height: 100px;
}

.details-phone .phone-ico {
  padding: 0;
	height: inherit;
}

.details-phone .detail-row {
	padding: 0;
}

.details-phone .phone-ico img {
  height: 80%;
	margin: 0 auto;
}

.details-phone .block {
  display: inline-block;
  margin-left: 5px;
  vertical-align: middle;
}

.details-phone .title {
  color: #ffffff;
}

.jumbotron .details {
  margin-top: 40px;
  padding: 15px;
  height: 50px;
  font-family: 'Open Sans', sans-serif;
  font-size: 22px;
  font-weight: 300;
  font-style: normal;
  font-stretch: condensed;
  line-height: 1.31;
  text-align: left;
  color: #ffd527;
}

.jumbotron .details .title {
  color: #ffffff;
}

.jumbotron .details .block {
  margin-left: 10px;
}

.jumbotron .details .details-image {
  height: 50px;
  width: 50px;
  margin: 5px auto;
  padding: 0;
}

.jumbotron .details .icon-calender {
  background: url('../assets/ico-date.png') center / 100% no-repeat;
}

.jumbotron .details .icon-location {
  background: url('../assets/ico-location.png') center / 60% no-repeat;
}

.jumbotron .links {
  margin-top: 120px;
}

.jumbotron .links a {
  text-decoration: none;
  color: #ffd41d;
}

.jumbotron .links .cfp {
  width: 80%;
  height: 48px;
  border-radius: 4px;
  background-color: #ffd31d;
  line-height: 48px;
  text-align: center;
  cursor: pointer;
  margin: 20px auto 0;
}

.jumbotron .links .cfp.disabled {
  pointer-events: none;
  background-color: rgba(154,127,13, 0.8);
}

.jumbotron .links .cfp .text {
  font-family: 'Fjalla One', sans-serif;
  font-size: 28px;
  font-weight: normal;
  font-style: normal;
  font-stretch: normal;
  text-align: left;
  color: #000;
  display: flex;
  justify-content: center;
  align-items: center;
}

.jumbotron .links .cfp .text .small-text {
  font-size: 12px;
  margin-left: 10px;
}

.jumbotron .recap {
  margin-top: 39px;
}

.jumbotron .sponser {
  margin-top: 20px;
}


/* Tickets Section */

.tickets {
  min-height: 650px;
  background-image: url(../assets/ticket-b-g.png);
  background-size: 100% 650px;
}

.tickets .buy-tickets-col {
  text-align: center;
  margin-top: 100px;
}

.tickets .buy-tickets {
  width: 269px;
  height: 36px;
  font-family: 'Open Sans', sans-serif;
  font-size: 48px;
  font-weight: 300;
  font-style: normal;
  font-stretch: normal;
  text-align: center;
  color: #000000;
}

.tickets .tickets-types-col {
  text-align: center;
  margin-top: 100px;
}

.margin-tb10 {
  margin: 10px 0;
}

.margin-lr10 {
  margin: 0 10px;
}

.tickets .text {
  font-family: 'Open Sans', sans-serif;
  font-size: 18px;
  font-weight: normal;
  font-style: normal;
  font-stretch: normal;
  line-height: 2.06;
  letter-spacing: -0.4px;
  text-align: center;
  color: #ffffff;
  margin-bottom: 38px;
}

.tickets .price-box {
  width: 230px;
  height: 107px;
  margin-top: 38px;
  margin: 0 auto;
  background-image: url(../assets/img-ticket.png);
  background-size: 230px 107px;
  line-height: 107px;
}

.tickets .price-text {
  font-family: 'Roboto Mono', monospace;
  font-size: 47px;
  font-weight: 500;
  font-style: normal;
  font-stretch: normal;
  line-height: 3.36;
  text-align: center;
  line-height: normal;
  vertical-align: middle;
}

.tickets .price-btn {
  width: 135px;
  height: 36px;
  border-radius: 4px;
  background-color: #ff6c00;
  margin-top: 60px;
}

.tickets .price-btn span {
  width: 63px;
  height: 17px;
  font-family: 'Fjalla One', sans-serif;
  font-size: 18px;
  font-weight: normal;
  font-style: normal;
  font-stretch: normal;
  text-align: center;
  color: #ffffff;
}

.tickets .few-seats {
  width: 231px;
  height: 15px;
  font-family: 'Open Sans', sans-serif;
  font-size: 14px;
  font-weight: normal;
  font-style: italic;
  font-stretch: normal;
  line-height: 2.64;
  text-align: center;
  color: #000000;
}


/* Gallery */

.gallery .gallery-image {
  height: 100%;
  width: 100%;
}

.gallery-image.image-1 {
  background: url('.././assets/gallery/1.jpg') center 100%/cover no-repeat;
}

.gallery-image.image-2 {
  background: url('.././assets/gallery/2.jpg') center 100%/cover no-repeat;
}
/* ... */

